--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -1,10 +1,16 @@
-body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: auto;
-   
-  }
-
   .jumbotron {
     max-width: 500px;
     margin: auto;
   }
+
+  .main-btns {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 40%;
+  }
+
+  .main-btns button:first-child {
+    margin-right: 20px;
+  }
+
+  
