--- a/app-folder/src/css/app.css
+++ b/app-folder/src/css/app.css
@@ -1,6 +1,6 @@
 body {
-	background: linear-gradient(-45deg, #132b58, #069c45, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
+	background: linear-gradient(-45deg, #132b58, #069c45, #23a6d5, #23d5ab) no-repeat center center fixed;
+  background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 }
 
