--- a/app-folder/src/css/app.css
+++ b/app-folder/src/css/app.css
@@ -6,6 +6,13 @@ body {
   box-shadow: none !important;
 }
 
+hr {
+  width: 80%;
+  background-color: #1a2209;
+  height: 2px;
+  border-radius: 25% 60%; 
+}
+
 footer {
   width: 100%;
   bottom: 0;
